# plotly_practice

./: .gitignore  main.py  pyproject.toml
