[project]
name = "plotly-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "dash-auth>=2.3.0",
    "dash-bio>=1.0.2",
    "dash-canvas>=0.1.0",
    "dash-cytoscape>=1.0.2",
    "dash-daq>=0.6.0",
    "networkx>=3.6.1",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
